--- a/Main/index.html
+++ b/Main/index.html
@@ -1,3 +1,10 @@
-
+<header>
+<ul>
+  <li><a href="default.asp">Home</a></li>
+  <li><a href="news.asp">News</a></li>
+  <li><a href="contact.asp">Contact</a></li>
+  <li><a href="about.asp">About</a></li>
+</ul>
+<header>
 <h1>Simple HTML template</h1>
 <p>A simple template for HTML<p>
