--- a/index.html
+++ b/index.html
@@ -35,5 +35,7 @@
       <li><a href="#contact">Contact</a></li>
       <li><a href="#about">About</a></li>
     </ul>
+<h2>Template</h2>
+<p>Template body>
   </body>
 </html>
