Fixed paragraph tag

--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
       <li><a href="#about">About</a></li>
     </ul>
 <h2>Template</h2>
-<p>Template body>
+<p>Template body</p>
   </body>
 </html>
