--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <li><a href="#contact">Contact</a></li>
       <li><a href="#about">About</a></li>
     </ul>
-<h2>Template</h2>
+<h2>Home</h2>
 <p>Template body</p>
   </body>
 </html>
