--- a/news.html
+++ b/news.html
@@ -35,7 +35,8 @@
       <li><a href="#contact">Contact</a></li>
       <li><a href="#about">About</a></li>
     </ul>
-<h2>Template</h2>
+<h2>News</h2>
+    <h4>Get the latest news!</h4>
 <p>Template body</p>
   </body>
 </html>
