--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
       <li><a href="#contact">Contact</a></li>
       <li><a href="#about">About</a></li>
     </ul>
-<h2>Template</h2>
-<p>Template body</p>
+<h2>Contact</h2>
+<p>Need help? Feel free to contact us!</p>
   </body>
 </html>
