--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       <li><a href="#contact">Contact</a></li>
       <li><a href="#about">About</a></li>
     </ul>
-<h2>Template</h2>
-<p>Template body</p>
+<h2>About</h2>
+<p>About us</p>
   </body>
 </html>
