--- a/index.html
+++ b/index.html
@@ -38,5 +38,8 @@
     </ul>
 <h2>Home</h2>
 <p>Template body</p>
+<footer>
+  <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance<a/></p>
+    </footer>
   </body>
 </html>
