--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
       <li><a href="#about">About</a></li>
     </ul>
 <h2>Home</h2>
-<p>Template body</p>
-<footer>
-  <br>
-  <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance<a/></p>
+<p>My aim with this template is to make a simple HTML website, that anyone with no coding experience at all could use for their own site. It is super simple, minimalistic and hopefully pretty useful!
     <br>
+    <br>
+  Find it on Github <a href="https://github.com/GiacomoLaw/simple-website-template">here</a>.
+    <br>
+<footer>
+  <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance<a/></p>
     </footer>
   </body>
 </html>
