added stylesheet and footer

--- a/about.html
+++ b/about.html
@@ -1,31 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        background-color: #f1f1f1;
-      }
-
-      ul li {
-        display: inline-block;
-      }
-
-      li a {
-        display: block;
-        color: #000;
-        padding: 8px 16px;
-        text-decoration: none;
-      }
-
-      /* Change the link color on hover */
-      li a:hover {
-        background-color: #555;
-        color: white;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
 
@@ -36,6 +12,10 @@
       <li><a href="#about">About</a></li>
     </ul>
 <h2>About</h2>
-<p>About us</p>
+    <p>This template is by <a href="https://about.me/giacomolaw>Giacomo Lawrance</a>.</p>
+          <br>
+<footer>
+  <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance<a/></p>
+    </footer>
   </body>
 </html>
