--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <body>
 
     <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#news">News</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#about">About</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="about.html">About</a></li>
     </ul>
 <h2>Home</h2>
 <p>My aim with this template is to make a simple HTML website, that anyone with no coding experience at all could use for their own site. It is super simple, minimalistic and hopefully pretty useful!
