fixed header links

--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@
   <body>
 
     <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#news">News</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#about">About</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="about.html">About</a></li>
     </ul>
 <h2>About</h2>
     <p>This template is by <a href="https://about.me/giacomolaw>Giacomo Lawrance</a>.</p>
