fixed links, added stylesheet, gave tab name

--- a/contact.html
+++ b/contact.html
@@ -1,39 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        background-color: #f1f1f1;
-      }
-
-      ul li {
-        display: inline-block;
-      }
-
-      li a {
-        display: block;
-        color: #000;
-        padding: 8px 16px;
-        text-decoration: none;
-      }
-
-      /* Change the link color on hover */
-      li a:hover {
-        background-color: #555;
-        color: white;
-      }
-    </style>
+<link rel="stylesheet" type="text/css" href="style.css">
+    <title>A simple website template</title>
   </head>
   <body>
 
     <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#news">News</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#about">About</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="about.html">About</a></li>
     </ul>
 <h2>Contact</h2>
 <p>Need help? Feel free to contact us!</p>
