--- a/contact.html
+++ b/contact.html
@@ -14,5 +14,9 @@
     </ul>
 <h2>Contact</h2>
 <p>Need help? Feel free to contact us!</p>
+    <br>
+    <footer>
+  <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance<a/></p>
+    </footer>
   </body>
 </html>
