--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+      <title>A simple website template</title>
   </head>
   <body>
 
@@ -15,7 +16,7 @@
     <p>This template is by <a href="https://about.me/giacomolaw>Giacomo Lawrance</a>.</p>
           <br>
 <footer>
-  <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance<a/></p>
-    </footer>
+      <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance</a></p>
+</footer>
   </body>
 </html>
