--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
     </ul>
 <h2>About</h2>
     <p>This template is by <a href="https://about.me/giacomolaw>Giacomo Lawrance</a>.</p>
-<footer>
-      <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance</a></p>
-</footer>
+ <footer>
+      <p>Original site by <a href="https://about.me>Giacomo Lawrance</a><p>
+      </footer>
   </body>
 </html>
