--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       <li><a href="about.html">About</a></li>
     </ul>
 <h2>About</h2>
-    <p>This template is by <a href="https://about.me/giacomolaw>Giacomo Lawrance</a>.</p>
+    <p>A simple HTML template for anyone!</p>
  <footer>
       <p>Original site by <a href="https://about.me>Giacomo Lawrance</a><p>
       </footer>
