--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <h2>About</h2>
     <p>A simple HTML template for anyone!</p>
  <footer>
-      <p>Original site by <a href="https://about.me>Giacomo Lawrance</a></p>
+        <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance</a></p>
       </footer>
   </body>
 </html>
