--- a/index.html
+++ b/index.html
@@ -4,22 +4,21 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>A simple website template</title>
   </head>
-  <body>
-
+<body>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="news.html">News</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="about.html">About</a></li>
     </ul>
-<h2>Home</h2>
-<p>My aim with this template is to make a simple HTML website, that anyone with no coding experience at all could use for their own site. It is super simple, minimalistic and hopefully pretty useful!
-    <br>
-    <br>
-  Find it on Github <a href="https://github.com/GiacomoLaw/simple-website-template">here</a>.
-    <br>
-<footer>
-  <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance<a/></p>
-    </footer>
-  </body>
+  <h2>Home</h2>
+    <p>My aim with this template is to make a simple HTML website, that anyone with no coding experience at all could use for their own site. It is super simple, minimalistic and hopefully pretty useful!</p>
+      <br>
+      <br>
+    <p>Find it on Github <a href="https://github.com/GiacomoLaw/simple-website-template">here</a>.</p>
+      <br>
+  <footer>
+    <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance<a/></p>
+  </footer>
+</body>
 </html>
