--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
+  <!-- <head> donotes the header of the page. In here are all the things loaded first. -->
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>A simple website template</title>
+    <link rel="stylesheet" type="text/css" href="style.css"> <!-- Here, the code is refering to a CSS style sheet. That sheet can be found in the style.css document. -->
+    <title>A simple website template</title> <!-- This is what appears as the tab title. -->
   </head>
 <body>
+  <!-- Below is the menu bar you see at the top. `href` refers to a link, and the page's also have titles. -->
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="news.html">News</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="about.html">About</a></li>
     </ul>
-  <h2>Home</h2>
+  <h2>Home</h2> <!-- This is a header element. -->
+    <!-- Below is a paragraph. Here, you imput text it. -->
     <p>My aim with this template is to make a simple HTML website, that anyone with no coding experience at all could use for their own site. It is super simple, minimalistic and hopefully pretty useful!</p>
       <br>
       <br>
     <p>Find it on Github <a href="https://github.com/GiacomoLaw/simple-website-template">here</a>.</p>
       <br>
-  <footer>
+  <footer> <!-- This is where the footer starts. It appears at the bottom of the page. If you want to change it's color, go to the style.css document, and find .footer -->
     <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance<a/></p>
   </footer>
 </body>
