--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     </ul>
   <h2>Home</h2> <!-- This is a header element. -->
     <!-- Below is a paragraph. Here, you imput text it. -->
-    <p>My aim with this template is to make a simple HTML website, that anyone with no coding experience at all could use for their own site. It is super simple, minimalistic and hopefully pretty useful! Find it on Github <a href="https://github.com/GiacomoLaw/simple-website-template">here</a>.</p>
+    <p>My aim with this template is to make a simple HTML website, that anyone with no coding experience at all could use for their own site. It is super simple, minimalistic and hopefully pretty useful! 
+      <br>
+      Find it on Github <a href="https://github.com/GiacomoLaw/simple-website-template">here</a>.</p>
       <br>
   <footer> <!-- This is where the footer starts. It appears at the bottom of the page. If you want to change it's color, go to the style.css document, and find .footer -->
     <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance<a/></p>
