added github link

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <li><a href="about.html">About</a></li>
    </ul>
   <h2>About</h2>
-   <p>A simple HTML template for anyone!</p>
+   <p>A simple HTML template for anyone! Find it on GitHub <a href="https://github.com/GiacomoLaw/simple-website-template">here</a>.</p>
   <footer>
     <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance</a></p>
   </footer>
