fixed my personal link

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <h2>About</h2>
    <p>A simple HTML template for anyone! Find it on GitHub <a href="https://github.com/GiacomoLaw/simple-website-template">here</a>.</p>
   <footer>
-    <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance</a></p>
+    <p>Original site by <a href="https://giacomolaw.github.io/">Giacomo Lawrance</a></p>
   </footer>
 </body>
 </html>
