--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
  <h2>Contact</h2>
   <p>Need help? Feel free to contact us!</p>
  <footer>
-  <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance</a></p>
+  <p>Original site by <a href="https://giacomolaw.github.io/">Giacomo Lawrance</a></p>
  </footer>
 </body>
 </html>
