--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
       Find it on Github <a href="https://github.com/GiacomoLaw/simple-website-template">here</a>.</p>
   </body>
   <footer> <!-- This is where the footer starts. It appears at the bottom of the page. If you want to change it's color, go to the style.css document, and find .footer -->
-    <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance<a/></p>
+    <p>Original site by <a href="https://giacomolaw.github.io/">Giacomo Lawrance<a/></p>
   </footer>
 </html>
