fixed personal link

--- a/news.html
+++ b/news.html
@@ -15,7 +15,7 @@
   <h4>Get the latest news!</h4>
   <p>Template body</p>
  <footer>
-  <p>Original site by <a href="https://about.me/giacomolaw">Giacomo Lawrance<a/></p>
+  <p>Original site by <a href="https://giacomolaw.github.io/">Giacomo Lawrance<a/></p>
  </footer>
 </body>
 </html>
