added header links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <!-- Below is the menu bar you see at the top. `href` refers to a link, and the page's also have titles. -->
     <ul>
       <li><a href="index.html">Home</a></li>
+      <li><a href="windows.html">Windows</a></li>
+      <li><a href="mac.html">Mac</a></li>
+      <li><a href="linux.html">Linux</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   <h2>Home</h2> <!-- This is a header element. -->
