--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
   <head>
 <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css"> <!-- Here, the code is refering to a CSS style sheet. That sheet can be found in the style.css document. -->
-    <title>A simple keylogger</title> <!-- This is what appears as the tab title. -->
+    <link rel="stylesheet" type="text/css" href="style.css"> 
+    <title>A simple keylogger</title>
   </head>
 <body>
-  <!-- Below is the menu bar you see at the top. `href` refers to a link, and the page's also have titles. -->
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="windows.html">Windows</a></li>
@@ -14,18 +13,16 @@
       <li><a href="linux.html">Linux</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
-  <h2>Home</h2> <!-- This is a header element. -->
-    <!-- Below is a paragraph. Here, you imput text it. -->
+  <h2>Home</h2> 
     <p>Simple keylogger is a simple keystroke logger for Windows, Mac and Linux. Check out the header for installation guides.
       <br>
       <br>
       Find it on Github <a href="https://github.com/GiacomoLaw/keylogger">here</a>.</p>
-  <!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/giacomolaw/keylogger/subscription" data-icon="octicon-eye" data-style="mega" data-count-href="/giacomolaw/keylogger/watchers" data-count-api="/repos/giacomolaw/keylogger#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch giacomolaw/keylogger on GitHub">Watch</a><!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/giacomolaw/keylogger" data-icon="octicon-star" data-style="mega" data-count-href="/giacomolaw/keylogger/stargazers" data-count-api="/repos/giacomolaw/keylogger#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star giacomolaw/keylogger on GitHub">Star</a><!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/giacomolaw/keylogger/archive/master.zip" data-icon="octicon-cloud-download" data-style="mega" aria-label="Download giacomolaw/keylogger on GitHub">Download</a>
   </body>
-  <footer> <!-- This is where the footer starts. It appears at the bottom of the page. If you want to change it's color, go to the style.css document, and find .footer -->
+  <footer> 
     <p>Original site by <a href="https://giacomolaw.github.io/">Giacomo Lawrance</a></p>
   </footer>
 </html>
