--- a/windows.html
+++ b/windows.html
@@ -14,10 +14,17 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   <h2>Installing on Windows</h2> 
-    <p>Simple keylogger is a simple keystroke logger for Windows, Mac and Linux. Check out the header for installation guides.
+    <p>Simply compile into an .exe, and then run. Visual Studio is good for this.
+<br><br>
+      There are two files; <code>klog_visible</code> and <code>klog_invisible</code>. It is pretty simple, but I will expand:
+
+      <code>klog_invisible</code> makes the window of the logger disappear, and it also starts up hidden from view. Note that it is still visible in the task manager.
+      <br><br>
+      <code>klog_visible</code> is visible, and the window does not close when typing. Great for testing it out.
+Both of these save the keystrokes to a .txt file when closed.</p>
       <br>
       <br>
-      Find it on Github <a href="https://github.com/GiacomoLaw/keylogger">here</a>.</p>
+      Find it on Github <a href="https://github.com/GiacomoLaw/keylogger">here</a>.
 <a class="github-button" href="https://github.com/giacomolaw/keylogger/subscription" data-icon="octicon-eye" data-style="mega" data-count-href="/giacomolaw/keylogger/watchers" data-count-api="/repos/giacomolaw/keylogger#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch giacomolaw/keylogger on GitHub">Watch</a><!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/giacomolaw/keylogger" data-icon="octicon-star" data-style="mega" data-count-href="/giacomolaw/keylogger/stargazers" data-count-api="/repos/giacomolaw/keylogger#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star giacomolaw/keylogger on GitHub">Star</a><!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/giacomolaw/keylogger/archive/master.zip" data-icon="octicon-cloud-download" data-style="mega" aria-label="Download giacomolaw/keylogger on GitHub">Download</a>
