--- a/linux.html
+++ b/linux.html
@@ -14,7 +14,7 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   <h2>Installing on Linux</h2> 
-  <h3>Installation</h3><
+  <h3>Installation</h3>
 <p>
   You'll need to install <code>python-xlib</code> if you don't have it.<br><br>
 
