--- a/mac.html
+++ b/mac.html
@@ -14,7 +14,40 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   <h2>Installing on Mac</h2> 
-    <p>Simple keylogger is a simple keystroke logger for Windows, Mac and Linux. Check out the header for installation guides.</p>
+    <p>This is a little more complicated, as its Apple after all! Please note, it does not work for secure areas such as password inputs. I have not found a work around yet.
+  </p>
+  <h3>Installation</h3>
+<p>
+  Download the repo. It will install in <code>/usr/local/bin/keylogger</code>.
+<br><br>
+Install it:<br><br>
+<code>
+$ git clone https://github.com/GiacomoLaw/Keylogger && cd keylogger<br>
+  $ make && make install</code>
+<br><br>
+  It will log to <code>/var/log/keystroke.log</code>. This may require root access, but you can change that if you want. Set where you want it to log:
+<br><br>
+  <code>
+$ keylogger ~/logfile.txt<br>
+
+Logging to: /var/log/keystroke.log
+  </code><br><br>
+Want to make it start on system startup?
+<br><br><code>
+$ sudo make startup
+  </code><br><br>
+That will run it on startup.
+  </p>
+  <h3>Uninstall</h3>
+<p>
+  <code>$ sudo make uninstall</code>
+<br><br>
+Will uninstall the program, but not the logs.
+<br><br>
+Thanks to Casey Scarborough for the base program!
+<br><br>
+  <i>Please note that this logger cannot record keystrokes in protected areas yet.</i>
+</p>
       <br>
       <br>
 <a class="github-button" href="https://github.com/giacomolaw/keylogger/subscription" data-icon="octicon-eye" data-style="mega" data-count-href="/giacomolaw/keylogger/watchers" data-count-api="/repos/giacomolaw/keylogger#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch giacomolaw/keylogger on GitHub">Watch</a><!-- Place this tag where you want the button to render. -->
