--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
   <head>
 <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.css"> 
     <link rel="stylesheet" type="text/css" href="/css/style.css"> 
     <title>A simple keylogger - Contact</title>
   </head>
