--- a/linux.html
+++ b/linux.html
@@ -2,7 +2,8 @@
 <html>
   <head>
 <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <link rel="stylesheet" type="text/css" href="/css/style.css"> 
+    <link rel="stylesheet" type="text/css" href="bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="style.css"> 
     <title>A simple keylogger - Linux</title>
   </head>
 <body>
