--- a/windows.html
+++ b/windows.html
@@ -14,6 +14,7 @@
       <li><a href="linux.html">Linux</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
+  <div class="padding">
   <h2>Installing on Windows</h2> 
     <p>Simply compile into an .exe, and then run. Visual Studio is good for this.
 <br><br>
@@ -28,7 +29,8 @@ Both of these save the keystrokes to a .txt file when closed.</p>
 <a class="github-button" href="https://github.com/giacomolaw/keylogger/subscription" data-icon="octicon-eye" data-style="mega" data-count-href="/giacomolaw/keylogger/watchers" data-count-api="/repos/giacomolaw/keylogger#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch giacomolaw/keylogger on GitHub">Watch</a><!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/giacomolaw/keylogger" data-icon="octicon-star" data-style="mega" data-count-href="/giacomolaw/keylogger/stargazers" data-count-api="/repos/giacomolaw/keylogger#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star giacomolaw/keylogger on GitHub">Star</a><!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/giacomolaw/keylogger/archive/master.zip" data-icon="octicon-cloud-download" data-style="mega" aria-label="Download giacomolaw/keylogger on GitHub">Download</a>
-  </body>
+  </div>
+    </body>
   <footer> 
     <p>Original site by <a href="https://giacomolaw.github.io/">Giacomo Lawrance</a></p>
   </footer>
