--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   <h2>Contact us!</h2> 
-    <p>Find me on <a href="twitter.com/giacomolaw>Twitter</a>, or send me an email <a href="mailto:thenerdystudent@gmail.com>here</a>.</p>
+    <p>Find me on <a href="twitter.com/giacomolaw">Twitter</a>, or send me an email <a href="mailto:thenerdystudent@gmail.com">here</a>.</p>
       
 <a class="github-button" href="https://github.com/giacomolaw/keylogger/subscription" data-icon="octicon-eye" data-style="mega" data-count-href="/giacomolaw/keylogger/watchers" data-count-api="/repos/giacomolaw/keylogger#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch giacomolaw/keylogger on GitHub">Watch</a><!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/giacomolaw/keylogger" data-icon="octicon-star" data-style="mega" data-count-href="/giacomolaw/keylogger/stargazers" data-count-api="/repos/giacomolaw/keylogger#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star giacomolaw/keylogger on GitHub">Star</a><!-- Place this tag where you want the button to render. -->
