--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,6 @@
 <a class="github-button" href="https://github.com/giacomolaw/keylogger/archive/master.zip" data-icon="octicon-cloud-download" data-style="mega" aria-label="Download giacomolaw/keylogger on GitHub">Download</a>
   </body>
   <footer> 
-    <p>Original site by <a href="https://giacomolaw.github.io/">Giacomo Lawrance</a></p>
+    <p>Site by <a href="https://giacomolaw.github.io/">Giacomo Lawrance</a></p>
   </footer>
 </html>
