--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
   </div>
   </body>
   <footer> 
-    <p>Original site by <a href="https://giacomolaw.github.io/">Giacomo Lawrance</a></p>
+    <p>Site by <a href="https://giacomolaw.github.io/">Giacomo Lawrance</a></p>
   </footer>
 </html>
