--- a/linux.html
+++ b/linux.html
@@ -76,6 +76,6 @@ $ sudo make startup</p>
   </div>
   </body>
   <footer> 
-    <p>Original site by <a href="https://giacomolaw.github.io/">Giacomo Lawrance</a></p>
+    <p>Site by <a href="https://giacomolaw.github.io/">Giacomo Lawrance</a></p>
   </footer>
 </html>
