--- a/windows.html
+++ b/windows.html
@@ -31,6 +31,6 @@ Both of these save the keystrokes to a .txt file when closed.</p>
   </div>
     </body>
   <footer> 
-    <p>Original site by <a href="https://giacomolaw.github.io/">Giacomo Lawrance</a></p>
+    <p>Site by <a href="https://giacomolaw.github.io/">Giacomo Lawrance</a></p>
   </footer>
 </html>
