--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
 <script async defer src="https://buttons.github.io/buttons.js"></script>
+  	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>A simple keylogger</title>
@@ -16,6 +17,9 @@
     </ul>
   <div class="padding">
     <p>Simple keylogger is a simple keystroke logger for Windows, Mac and Linux. Check out the header for installation guides.</p>
+			   <form action="https://github.com/GiacomoLaw/Keylogger" target="_blank">
+    			    <button type="submit"><i class="fa fa-github"></i> View on GitHub</button>		
+			   </form>
       
 <a class="github-button" href="https://github.com/giacomolaw/keylogger/subscription" data-icon="octicon-eye" data-style="mega" data-count-href="/giacomolaw/keylogger/watchers" data-count-api="/repos/giacomolaw/keylogger#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch giacomolaw/keylogger on GitHub">Watch</a><!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/giacomolaw/keylogger" data-icon="octicon-star" data-style="mega" data-count-href="/giacomolaw/keylogger/stargazers" data-count-api="/repos/giacomolaw/keylogger#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star giacomolaw/keylogger on GitHub">Star</a><!-- Place this tag where you want the button to render. -->
