Added more info

--- a/index.html
+++ b/index.html
@@ -16,12 +16,26 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   <div class="padding">
-    <p>Simple keylogger is a simple keystroke logger for Windows, Mac and Linux. Check out the header for installation guides.</p>
+    <p>Simple keylogger is a simple keystroke logger for Windows, Mac and Linux. Check out the links in the header for the installation guides.</p>
 <div id="center">	
 	  <form action="https://github.com/GiacomoLaw/Keylogger" target="_blank">
     	   <button type="submit"><i class="fa fa-github"></i> View on GitHub</button>		
           </form>
-	  </div>   
+	  </div> 
+	  <p>Some uses of a keylogger are:
+<br><br>
+- Business Administration: Monitor what employees are doing.<br>
+- School/Institutions: Track keystrokes and log banned words in a file.<br>
+- Personal Control and File Backup: Make sure no one is using your computer when you are away.<br>
+- Parental Control: Track what your children are doing.<br>
+- Self analysis.<br>
+- Feel free to contribute to fix any problems, or to submit an issue!<br>
+<br>
+Please note, this repo is for educational purposes only. No contributors, major or minor, are to fault for any actions done by this program.
+<br><br>
+By <a href="https://giacomolaw.github.io">Giacomo Lawrance</a> – <a href="https://twitter.com/giacomolaw">@GiacomoLaw</a>.
+<br><br>
+Distributed under the MIT license. See the <a href="https://github.com/GiacomoLaw/Keylogger/blob/master/LICENSE.txt">LICENSE</a> for more information.
 <a class="github-button" href="https://github.com/giacomolaw/keylogger/subscription" data-icon="octicon-eye" data-style="mega" data-count-href="/giacomolaw/keylogger/watchers" data-count-api="/repos/giacomolaw/keylogger#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch giacomolaw/keylogger on GitHub">Watch</a><!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/giacomolaw/keylogger" data-icon="octicon-star" data-style="mega" data-count-href="/giacomolaw/keylogger/stargazers" data-count-api="/repos/giacomolaw/keylogger#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star giacomolaw/keylogger on GitHub">Star</a><!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/giacomolaw/keylogger/archive/master.zip" data-icon="octicon-cloud-download" data-style="mega" aria-label="Download giacomolaw/keylogger on GitHub">Download</a>
