Closed paragraph tag

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Please note, this repo is for educational purposes only. No contributors, major 
 <br><br>
 By <a href="https://giacomolaw.github.io">Giacomo Lawrance</a> – <a href="https://twitter.com/giacomolaw">@GiacomoLaw</a>.
 <br><br>
-Distributed under the MIT license. See the <a href="https://github.com/GiacomoLaw/Keylogger/blob/master/LICENSE.txt">LICENSE</a> for more information.
+Distributed under the MIT license. See the <a href="https://github.com/GiacomoLaw/Keylogger/blob/master/LICENSE.txt">LICENSE</a> for more information.</p>
 <a class="github-button" href="https://github.com/giacomolaw/keylogger/subscription" data-icon="octicon-eye" data-style="mega" data-count-href="/giacomolaw/keylogger/watchers" data-count-api="/repos/giacomolaw/keylogger#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch giacomolaw/keylogger on GitHub">Watch</a><!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/giacomolaw/keylogger" data-icon="octicon-star" data-style="mega" data-count-href="/giacomolaw/keylogger/stargazers" data-count-api="/repos/giacomolaw/keylogger#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star giacomolaw/keylogger on GitHub">Star</a><!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/giacomolaw/keylogger/archive/master.zip" data-icon="octicon-cloud-download" data-style="mega" aria-label="Download giacomolaw/keylogger on GitHub">Download</a>
