--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-	  <link rel="icon" type="image/ico" href="favicon.ico">
+	  <link rel="shortcut icon" href="favicon.ico" />
 <script async defer src="https://buttons.github.io/buttons.js"></script>
   	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
