--- a/linux.html
+++ b/linux.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-<script async defer src="https://buttons.github.io/buttons.js"></script>
+    <link rel="shortcut icon" href="favicon.ico" />
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
     <link rel="stylesheet" type="text/css" href="style.css"> 
     <title>A simple keylogger - Linux</title>
