added download button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 	  <form action="https://github.com/GiacomoLaw/Keylogger" target="_blank">
     	   <button type="submit"><i class="fa fa-github"></i> View on GitHub</button>		
           </form>
+	<form action="https://github.com/GiacomoLaw/Keylogger/archive/V2.4.zip" target="_blank">
+    	   <button type="submit"><i class="fa fa-download"></i> Download from GitHub</button>		
+          </form>
 	  </div> 
 	  <p>Some uses of a keylogger are:
 <br><br>
