--- a/index.html
+++ b/index.html
@@ -19,13 +19,19 @@
   <div class="padding">
     <p>Simple keylogger is a simple keystroke logger for Windows, Mac and Linux. Check out the links in the header for the installation guides.</p>
 <div id="center">	
+	<div id="outer">
+		<div id="inner">
 	  <form action="https://github.com/GiacomoLaw/Keylogger" target="_blank">
     	   <button type="submit"><i class="fa fa-github"></i> View on GitHub</button>		
           </form>
+							</div>
+							<div id="inner">
 	<form action="https://github.com/GiacomoLaw/Keylogger/archive/V2.4.zip" target="_blank">
     	   <button type="submit"><i class="fa fa-download"></i> Download from GitHub</button>		
           </form>
+		</div>
 	  </div> 
+	  </div>
 	  <p>Some uses of a keylogger are:
 <br><br>
 - Business Administration: Monitor what employees are doing.<br>
