corrected inner tags to id, not class

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <p>Simple keylogger is a simple keystroke logger for Windows, Mac and Linux. Check out the links in the header for the installation guides.</p>
 <div id="center">	
 	<div id="outer">
-		<div id="inner">
+		<div class="inner">
 	  <form action="https://github.com/GiacomoLaw/Keylogger" target="_blank">
     	   <button type="submit"><i class="fa fa-github"></i> View on GitHub</button>		
           </form>
 							</div>
-							<div id="inner">
+							<div class="inner">
 	<form action="https://github.com/GiacomoLaw/Keylogger/archive/V2.4.zip" target="_blank">
     	   <button type="submit"><i class="fa fa-download"></i> Download from GitHub</button>		
           </form>
