--- a/linux.html
+++ b/linux.html
@@ -17,6 +17,20 @@
     </ul>
   <div class="padding">
   <h2>Installing on Linux</h2> 
+    <div id="center">	
+	<div id="outer">
+		<div class="inner">
+	  <form action="https://github.com/GiacomoLaw/Keylogger" target="_blank">
+    	   <button type="submit"><i class="fa fa-github"></i> View on GitHub</button>		
+          </form>
+							</div>
+							<div class="inner">
+	<form action="https://github.com/GiacomoLaw/Keylogger/archive/V2.4.zip" target="_blank">
+    	   <button type="submit"><i class="fa fa-download"></i> Download from GitHub</button>		
+          </form>
+		</div>
+	  </div> 
+	  </div>
   <h3>Installation</h3>
 <p>
   You'll need to install <code>python-xlib</code> if you don't have it.<br><br>
