added download buttons

--- a/mac.html
+++ b/mac.html
@@ -17,6 +17,20 @@
     </ul>
   <div class="padding">
   <h2>Installing on Mac</h2> 
+    <div id="center">	
+	<div id="outer">
+		<div class="inner">
+	  <form action="https://github.com/GiacomoLaw/Keylogger" target="_blank">
+    	   <button type="submit"><i class="fa fa-github"></i> View on GitHub</button>		
+          </form>
+							</div>
+							<div class="inner">
+	<form action="https://github.com/GiacomoLaw/Keylogger/archive/V2.4.zip" target="_blank">
+    	   <button type="submit"><i class="fa fa-download"></i> Download from GitHub</button>		
+          </form>
+		</div>
+	  </div> 
+	  </div>
     <p>This is a little more complicated, as its Apple after all! Please note, it does not work for secure areas such as password inputs. I have not found a work around yet.
   </p>
   <h3>Installation</h3>
