--- a/windows.html
+++ b/windows.html
@@ -31,13 +31,13 @@
 		</div>
 	  </div> 
 	  </div>
-    <p>Simply compile into an .exe, and then run. Visual Studio is good for this.
+	  <p>To change visibility of the window set the <code>#define</code> in line 6 to <code>visible</code> or <code>invisible</code>.
 <br><br>
-      There are two files; <code>klog_visible</code> and <code>klog_invisible</code>. It is pretty simple, but I will expand:
+Simply compile into an .exe, and then run. Visual Studio is good for this.
 <br><br>
-      <code>klog_invisible</code> makes the window of the logger disappear, and it also starts up hidden from view. Note that it is still visible in the task manager.
-      <br><br>
-      <code>klog_visible</code> is visible, and the window does not close when typing. Great for testing it out.
+- <code>invisible</code> makes the window of the logger disappear, and it also starts up hidden from view. Note that it is still visible in the task manager.
+- <code>visible</code> is visible, and the window does not close when typing. Great for testing it out.
+<br><br>
 Both of these save the keystrokes to a .txt file when closed.</p>
       
 <a class="github-button" href="https://github.com/giacomolaw/keylogger/subscription" data-icon="octicon-eye" data-style="mega" data-count-href="/giacomolaw/keylogger/watchers" data-count-api="/repos/giacomolaw/keylogger#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch giacomolaw/keylogger on GitHub">Watch</a><!-- Place this tag where you want the button to render. -->
