--- a/windows.html
+++ b/windows.html
@@ -35,7 +35,7 @@
 <br><br>
 Simply compile into an .exe, and then run. Visual Studio is good for this.
 <br><br>
-- <code>invisible</code> makes the window of the logger disappear, and it also starts up hidden from view. Note that it is still visible in the task manager.
+- <code>invisible</code> makes the window of the logger disappear, and it also starts up hidden from view. Note that it is still visible in the task manager.<br>
 - <code>visible</code> is visible, and the window does not close when typing. Great for testing it out.
 <br><br>
 Both of these save the keystrokes to a .txt file when closed.</p>
