--- a/linux.html
+++ b/linux.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="shortcut icon" href="favicon.ico" />
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
     <link rel="stylesheet" type="text/css" href="style.css"> 
     <title>A simple keylogger - Linux</title>
