Added font awesome and mobile support

--- a/mac.html
+++ b/mac.html
@@ -3,6 +3,8 @@
   <head>
     <link rel="shortcut icon" href="favicon.ico" />
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+	    	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
     <link rel="stylesheet" type="text/css" href="style.css"> 
     <title>A simple keylogger - Mac</title>
