--- a/linux.html
+++ b/linux.html
@@ -31,6 +31,11 @@
     	   <button type="submit"><i class="fa fa-download"></i> Download from GitHub</button>		
           </form>
 		</div>
+		<div class="inner">
+	<form action="https://github.com/GiacomoLaw/Keylogger/archive/master.zip" target="_blank">
+    	   <button type="submit"><i class="fa fa-download"></i> Download from GitHub (latest release)</button>		
+          </form>
+		</div>
 	  </div> 
 	</div>
 	  <br>
