--- a/mac.html
+++ b/mac.html
@@ -28,7 +28,7 @@
 							</div>
 							<div class="inner">
 	<form action="https://github.com/GiacomoLaw/Keylogger/archive/V2.4.zip" target="_blank">
-    	   <button type="submit"><i class="fa fa-download"></i> Download from GitHub</button>		
+    	   <button type="submit"><i class="fa fa-download"></i> Download from GitHub (V2.4)</button>		
           </form>
 		</div>
 		<div class="inner">
