added blank targets to links

--- a/mac.html
+++ b/mac.html
@@ -79,6 +79,6 @@ Thanks to Casey Scarborough for the base program!
   </div>
   </body>
   <footer> 
-    <p>Site by <a href="https://giacomolaw.github.io/">Giacomo Lawrance</a></p>
+    <p>Site by <a href="https://giacomolaw.github.io/" target="_blank">Giacomo Lawrance</a></p>
   </footer>
 </html>
