--- a/linux.html
+++ b/linux.html
@@ -99,6 +99,6 @@ $ sudo make startup</p>
   </div>
   </body>
   <footer> 
-    <p>Site by <a href="https://giacomolaw.github.io/">Giacomo Lawrance</a></p>
+    <p>Site by <a href="https://giacomolaw.github.io/" target="_blank">Giacomo Lawrance</a></p>
   </footer>
 </html>
