--- a/windows.html
+++ b/windows.html
@@ -56,6 +56,6 @@ Both of these save the keystrokes to a .txt file when closed.</p>
   </div>
     </body>
   <footer> 
-    <p>Site by <a href="https://giacomolaw.github.io/">Giacomo Lawrance</a></p>
+    <p>Site by <a href="https://giacomolaw.github.io/" target="_blank">Giacomo Lawrance</a></p>
   </footer>
 </html>
