updated all headers across pages

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
       <li><a href="mac.html">Mac</a></li>
       <li><a href="linux.html">Linux</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="donate.html">Donate</a></li>
     </ul>
   <div class="padding">
   <h2>Contact us!</h2> 
