--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="mac.html">Mac</a></li>
       <li><a href="linux.html">Linux</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="donate.html">Donate</a></li>
     </ul>
   <div class="padding">
     <p>Simple keylogger is a simple keystroke logger for Windows, Mac and Linux. Check out the links in the header for the installation guides.</p>
