--- a/index.html
+++ b/index.html
@@ -1,65 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
-	  <link rel="shortcut icon" href="favicon.ico" />
-<script async defer src="https://buttons.github.io/buttons.js"></script>
-  	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>A simple keylogger</title>
-  </head>
+<head>
+    <link rel="shortcut icon" href="img/favicon.ico"/>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
+    <link href="css/style.css" rel="stylesheet" type="text/css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Simple Keylogger</title>
+</head>
 <body>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="windows.html">Windows</a></li>
-      <li><a href="mac.html">Mac</a></li>
-      <li><a href="linux.html">Linux</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="donate.html">Donate</a></li>
-    </ul>
-  <div class="padding">
-    <p>Simple keylogger is a simple keystroke logger for Windows, Mac and Linux. Check out the links in the header for the installation guides.</p>
-<div id="center">	
-	<div id="outer">
-		<div class="inner">
-	  <form action="https://github.com/GiacomoLaw/Keylogger" target="_blank">
-    	   <button type="submit"><i class="fa fa-github"></i> View on GitHub</button>		
-          </form>
-							</div>
-							<div class="inner">
-	<form action="https://github.com/GiacomoLaw/Keylogger/releases/tag/2.7.1" target="_blank">
-    	   <button type="submit"><i class="fa fa-download"></i> Download from GitHub (V2.7.1)</button>		
-          </form>
-	</div>
-		<div class="inner">
-	<form action="https://github.com/GiacomoLaw/Keylogger/archive/master.zip" target="_blank">
-    	   <button type="submit"><i class="fa fa-download"></i> Download from GitHub (latest release)</button>		
-          </form>
-		</div>
-	  </div> 
-	  </div>
-	  <br>
-	  <p>Some uses of a keylogger are:
-<br><br>
-- Business Administration: Monitor what employees are doing.<br>
-- School/Institutions: Track keystrokes and log banned words in a file.<br>
-- Personal Control and File Backup: Make sure no one is using your computer when you are away.<br>
-- Parental Control: Track what your children are doing.<br>
-- Self analysis.<br>
-- Feel free to contribute to fix any problems, or to submit an issue!<br>
+<div class="front">
+    <br>
+    <img src="img/icon.png" alt="Me!" width="150px" height="150px" class="centre"/>
+    <div class="padding">
+        <p>Simple Keylogger is a keylogger for Windows, Linux and MacOS.
+            <br/><br/>
+            You can find links to it below, including the Github repository, the latest release, or the latest version
+            (may be less stable).</p>
+        <div id="center" class="buttonlist">
+            <div id="outer">
+                <div class="inner">
+                    <form action="https://github.com/GiacomoLaw/Keylogger" target="_blank">
+                        <button type="submit"><i class="fa fa-github"></i> View on GitHub</button>
+                    </form>
+                </div>
+                <div class="inner">
+                    <form action="https://github.com/GiacomoLaw/Keylogger/releases/tag/2.7.1" target="_blank">
+                        <button type="submit"><i class="fa fa-download"></i> Download from GitHub (V2.7.1)</button>
+                    </form>
+                </div>
+                <div class="inner">
+                    <form action="https://github.com/GiacomoLaw/Keylogger/archive/master.zip" target="_blank">
+                        <button type="submit"><i class="fa fa-download"></i> Download from master branch
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
 <br>
-Please note, this repo is for educational purposes only. No contributors, major or minor, are to fault for any actions done by this program.
-<br><br>
-By <a href="https://giacomolaw.github.io" target="_blank">Giacomo Lawrance</a> – <a href="https://twitter.com/giacomolaw" target="_blank">@GiacomoLaw</a>.
-<br><br>
-Distributed under the MIT license. See the <a href="https://github.com/GiacomoLaw/Keylogger/blob/master/LICENSE.txt" target="_blank">LICENSE</a> for more information.</p>
-<a class="github-button" href="https://github.com/giacomolaw/keylogger/subscription" data-icon="octicon-eye" data-style="mega" data-count-href="/giacomolaw/keylogger/watchers" data-count-api="/repos/giacomolaw/keylogger#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch giacomolaw/keylogger on GitHub">Watch</a><!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/giacomolaw/keylogger" data-icon="octicon-star" data-style="mega" data-count-href="/giacomolaw/keylogger/stargazers" data-count-api="/repos/giacomolaw/keylogger#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star giacomolaw/keylogger on GitHub">Star</a><!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/giacomolaw/keylogger/archive/master.zip" target="_blank" data-icon="octicon-cloud-download" data-style="mega" aria-label="Download giacomolaw/keylogger on GitHub">Download</a>
-  </div>
-  </body>
-  <footer> 
-    <p>Site by <a href="https://giacomolaw.github.io/" target="_blank">Giacomo Lawrance</a></p>
-  </footer>
 </html>
